Fix the image error

--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
                         <div class="diamond"><img src="images/pumpernickel.jpg" alt="Pumpernickel"></div>
                         <div class="diamond"><img src="images/pretzels.jpg" alt="Pretzel"></div>
                         <div class="diamond"><img src="images/Baguette.jpg" alt="Baguette"></div>
-                        <div class="diamond"><img src="images/Whole Wheat.jpg" alt="Whole Wheat"></div>
+                        <div class="diamond"><img src="images/whole-wheat.jpg" alt="Whole Wheat"></div>
                     </div>
                 </div>
             </div>
