Fix the image error 1

--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
                         </p>
                     </div>
                     <div class="product-item">
-                        <img src="images/Baguette.jpg" alt="Baguette">
+                        <img src="images/baguette.jpg" alt="Baguette">
                         <h3>Baguette</h3>
                         <p class="price">
                             <span class="old-price">$5.0</span>
